# glslcross

./: CMakeLists.txt
include/: glslcross.hpp
src/: glslcross.cpp
